--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "AWS application for repeated activities",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"no tests\""
+    "test": "BABEL_ENV=test mocha --require babel-core/register './{,!(node_modules)/**/}*.test.js'",
+    "build:clean": "rm -rf prod",
+    "build:dev": "BABEL_ENV=dev webpack --config internals/webpack.dev.js;",
+    "build:prod": "BABEL_ENV=prod webpack --config internals/webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,16 @@
   "bugs": {
     "url": "https://github.com/fongelias/ritual/issues"
   },
-  "homepage": "https://github.com/fongelias/ritual#readme"
+  "homepage": "https://github.com/fongelias/ritual#readme",
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "redux": "^4.0.0"
+  }
 }
