--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 node_js:
   - 9.10.1
+before_script:
+  - npm run build:dev
+before_deploy:
+  - npm run build:prod
 deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY_ID
