--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "webpack": "^2.2.1",
   },
   "dependencies": {
     "express": "^4.16.3"
