--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
     "supertest": "^3.0.0",
-    "webpack": "^2.2.1",
+    "webpack": "^2.2.1"
   },
   "dependencies": {
     "express": "^4.16.3"
