--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY_ID
     secret_access_key: $AWS_SECRET_ACCESS_KEY
-    bucket: ritual-app
+    bucket: ritualmap.com
     skip_cleanup: true
     local_dir: prod/public
   - provider: lambda
