--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^3.2.0",
     "mocha": "^5.1.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
