--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^5.1.1",
+    "node-sass": "^4.8.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
+    "sass-loader": "^7.0.1",
     "supertest": "^3.0.0",
-    "webpack": "^2.2.1"
+    "webpack": "^3.11.0"
   },
   "dependencies": {
     "express": "^4.16.3"
