--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-svg-loader": "^2.1.0",
     "redux": "^4.0.0",
     "sass-loader": "^7.0.1",
     "supertest": "^3.0.0",
