--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "src/server/server.js",
   "scripts": {
     "start": "node src/server/server.js",
-    "test": "BABEL_ENV=test mocha --require babel-core/register './{,!(node_modules)/**/}*.test.js'",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage || true",
     "build:clean": "rm -rf prod; rm -rf dev;",
-    "build:dev": "BABEL_ENV=dev webpack --config internals/webpack.dev.js;",
+    "build:dev": "BABEL_ENV=dev webpack --config internals/webpack.dev.js",
+    "build:watch": "BABEL_ENV=dev webpack --config internals/webpack.dev.js -w & node src/server/server.js",
     "build:prod": "BABEL_ENV=prod webpack --config internals/webpack.prod.js"
   },
   "repository": {
@@ -30,7 +33,8 @@
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
-    "mocha": "^5.1.1",
+    "jest": "^22.4.3",
+    "jest-cli": "^22.4.3",
     "node-sass": "^4.8.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -40,7 +44,8 @@
     "redux": "^4.0.0",
     "sass-loader": "^7.0.1",
     "supertest": "^3.0.0",
-    "webpack": "^3.11.0"
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "express": "^4.16.3"
